[gd_scene load_steps=6 format=2]

[ext_resource path="res://Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Input/tile_0086.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Metallica - Enter Sandman.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/House.tscn" type="PackedScene" id=5]

[node name="GameScene" type="Node"]
script = ExtResource( 3 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
margin_left = 16.0
margin_top = 525.0
margin_right = 80.0
margin_bottom = 589.0
rect_min_size = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 2 )
expand = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="SongTimer" type="Timer" parent="."]

[node name="ChildTimer" type="Timer" parent="SongTimer"]

[node name="SongStart" type="Timer" parent="."]

[node name="House" parent="." instance=ExtResource( 5 )]
position = Vector2( 625, 337 )

[connection signal="timeout" from="SongTimer" to="." method="_on_SongTimer_timeout"]
[connection signal="timeout" from="SongTimer/ChildTimer" to="." method="_on_ChildTimer_timeout"]
[connection signal="timeout" from="SongStart" to="." method="_on_SongStart_timeout"]
